# smart-mess

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .env.example.txt  .gitignore  example.env.txt  main.py  package.json  pyproject.toml
apps/api/analytics/: routes.py  schema.py
apps/api/auth/: config.py  dep.py  enums.py  main.py  models.py  oauth2.py  routes.py  schemas.py  security.py
apps/api/core/: config.py  limiter.py  schema.py  socket.py
apps/api/db/: session.py
apps/api/menu/: collab_filter.py  dependencies.py  enums.py  models.py  recommendation.py  route.py  schema.py  utils.py
apps/api/mess/: crud.py  dependencies.py  models.py  route.py  schema.py
apps/api/mess_table/: crud.py  models.py  route.py  schema.py
apps/api/middleware/: login_rate_limiter.py  token_middleware.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0819fa7fbc1a_timezone_fix.py  0f8ec5468b10_mess_user_relation_update_3.py  12f473313ba1_order_transaction.py  146dedfac3c7_customer_token_db_update.py  165450f196d0_update_customer.py  1b37c48afebf_orders_relation_customer.py  1efc82db09ff_customer_model_import.py  1f8fe613e5c9_update.py  288e4a5d70f0_opaque_token.py  2d8f7dcbede4_mess_logo_currency_add.py  2fe7f3a1cdc2_default_false.py  33253043e39d_orders_item_tweak.py  3ccf5c07c723_customer_oauth_model.py  491e9835d9b2_orders_relation_customer.py  4fb3876f00c0_initial_migration.py  (+34 more)
apps/api/orders/: models.py  route.py  schema.py
apps/api/upload/: route.py  schema.py
apps/api/utils/: file.py  mess.py  qr.py
(+199 files in other folders)
