[project]
name = "api"
version = "0.1.0"
description = "Smart Mess Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiomcache>=0.8.2",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "fastapi[standard]>=0.115.12",
    "httpx-oauth>=0.16.1",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "passlib>=1.7.4",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.4",
    "pyjwt>=2.10.1",
    "qrcode>=8.2",
    "scikit-learn>=1.7.0",
    "sqlalchemy>=2.0.40",
]
